--- a/Pokéfarm/UserScript/Notification/NotifDialogHTML.html
+++ b/Pokéfarm/UserScript/Notification/NotifDialogHTML.html
@@ -8,8 +8,8 @@
           <input type='url' id='sound-url' name='sound-url' placeholder='/audio/absol.mp3' />
         </div>
         <div id='sound-buttons'>
-          <input type='button' id='confirm' onclick='' />
-          <input type='button' id='cancel' onclick='' />
+          <input type='button' id='confirm' onclick=''>Confirm</input>
+          <input type='button' id='cancel' onclick=''>Cancel</input>
         </div>
       </div>
     </div>
