--- a/Pokéfarm/UserScript/Notification/NotifDialogHTML.html
+++ b/Pokéfarm/UserScript/Notification/NotifDialogHTML.html
@@ -1,7 +1,7 @@
 <div class='dialog notification'>
   <div>
     <div>
-      <div class='panel'>
+      <div class='panel notification'>
         <h3>Set Notification Sound</h3>
         <div id='sound-style'>
           <label for='sound-url'>Sound File URL: </label>
