--- a/Pokéfarm/UserScript/Notification/NotifDialogHTML.html
+++ b/Pokéfarm/UserScript/Notification/NotifDialogHTML.html
@@ -9,7 +9,7 @@
         </div>
         <div id='sound-buttons'>
           <button id='confirm' onclick=''>Confirm</button>
-          <button id='cancel' onclick=''>Cancel</button>
+          <button id='cancel' onclick='clearDialog()'>Cancel</button>
         </div>
       </div>
     </div>
