--- a/Pokéfarm/UserScript/Notification/NotifDialogHTML.html
+++ b/Pokéfarm/UserScript/Notification/NotifDialogHTML.html
@@ -8,8 +8,8 @@
           <input type='url' id='sound-url' name='sound-url' placeholder='/audio/absol.mp3' />
         </div>
         <div id='sound-buttons'>
-          <button id='confirm' onclick=''>Confirm</button>
-          <button id='cancel' onclick='function() { clearDialog() }'>Cancel</button>
+          <button id='confirm'>Confirm</button>
+          <button id='cancel'>Cancel</button>
         </div>
       </div>
     </div>
