--- a/Pokéfarm/UserScript/CustomUI/CustomUIHubHTML.html
+++ b/Pokéfarm/UserScript/CustomUI/CustomUIHubHTML.html
@@ -12,7 +12,7 @@
             <li>Option 5</li>
             <li>Option 6</li>
           </ul>
-          <button type='button' style='float: right;'>Close</button>
+          <button id='close' type='button' style='float: right;'>Close</button>
         </div>
       </div>
     </div>
