--- a/Pokéfarm/UserScript/CustomUI/CustomUIHubHTML.html
+++ b/Pokéfarm/UserScript/CustomUI/CustomUIHubHTML.html
@@ -3,14 +3,22 @@
     <div>
       <div class='panel'>
         <h3>CustomUI Hub</h3>
-        <div>
-          <ul>
-            <li>Option 1</li>
-            <li>Option 2</li>
-            <li>Option 3</li>
-            <li>Option 4</li>
-            <li>Option 5</li>
-            <li>Option 6</li>
+        <div id='settings' style='overflow-y: auto'>
+          <ul id='shelter'>
+            <li id='option'>Shelter List</li>
+            <li>Editable</li>
+            <li>Announce Special</li>
+            <li>Edit Colors</li>
+          </ul>
+          <ul id='item-count'>
+            <li id='option'>Shelter List</li>
+            <li>Editable</li>
+            <li>Create Announcement</li>
+            <li>Edit Colors</li>
+          </ul>
+          <ul id='misc'>
+            <li id='option'>Miscellany</li>
+            <li>Tooltip at Mouse Position</li>
           </ul>
           <button id='close' type='button' style='float: right;'>Close</button>
         </div>
