--- a/Pokéfarm/UserScript/Skin Organization/home.html
+++ b/Pokéfarm/UserScript/Skin Organization/home.html
@@ -1,10 +1,11 @@
 <div id="path">
 	<span id="path-par"></span>
-	<span id="path-cur">Home</span>
+	<span id="path-cur"><a style="text-decoration: none;">Home</a></span>
 </div>
 <div id="add">
 	<button id="folder">New Folder</button>
+	&emsp;
 	<button id="file">New Skin</button>
 </div>
 <div id="skins"></div>
-<div id="btt"><a href="#"><i>Top</i></a></div>
+<div id="btt"><a href="#">Top</a></div>
