--- a/Pokéfarm/UserScript/Skin Organization/home.html
+++ b/Pokéfarm/UserScript/Skin Organization/home.html
@@ -3,9 +3,7 @@
 	<span id="path-cur"><a style="text-decoration: none;">Home</a></span>
 </div>
 <div id="add">
-	<button id="folder">New Folder</button>
-	&emsp;
-	<button id="file">New Skin</button>
+	<button id="folder">New Folder</button>&emsp;<button id="file">New Skin</button>
 </div>
 <div id="skins"></div>
 <div id="btt"><a href="#">Top</a></div>
