--- a/Pokéfarm/UserScript/Skin Organization/home.html
+++ b/Pokéfarm/UserScript/Skin Organization/home.html
@@ -6,4 +6,4 @@
 	<button id="folder">New Folder</button>&emsp;<button id="file">New Skin</button>
 </div>
 <div id="skins"></div>
-<div id="btt"><a href="#">Top</a></div>
+<div id="btt"><a href="#path">Top</a></div>
