--- a/Pokéfarm/UserScript/Skin Organization/home.html
+++ b/Pokéfarm/UserScript/Skin Organization/home.html
@@ -1,6 +1,5 @@
 <div id="path">
-	<span id="path-par"></span>
-	<span id="path-cur"><a style="text-decoration: none;">Home</a></span>
+	<span id="path-par"></span><span id="path-cur"><a style="text-decoration: none;">Home</a></span>
 </div>
 <div id="add">
 	<button id="folder">New Folder</button>&emsp;<button id="file">New Skin</button>
